Added Recommandation Section

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 
 <header class="hero">
   <div class="hero-left">
-<<<<<<< HEAD
     <img src="IMAGE.jpeg" alt="profile-image" class="profile-img"/>
-=======
-    <img src="profile.jpg" alt="profile-image" class="profile-img"/>
->>>>>>> aea7fd6a9303d26235fc11ff4149299cea3375d3
   </div>
 
   <div class="hero-right">
@@ -31,10 +27,6 @@
     <div class="social-links">
       <a href="https://www.linkedin.com/in/suraj-more-488636200/" target="_blank">LinkedIn</a>
       <a href="https://github.com/Suraj-2003" target="_blank">GitHub</a>
-      
-      <!-- 
-      <a href="#">Portfolio</a>
-      -->
     </div>
   </div>
 </header>
@@ -46,44 +38,38 @@
   <div class="timeline">
     <div class="item">
       <h3>MSc (Computer Management)</h3>
-      <p>College of computer science and information technology, Latur (2025)</p>
+      <p>College of Computer Science & IT, Latur (2025)</p>
     </div>
-
     <div class="item">
       <h3>BCA (Computer Application)</h3>
-      <p>Dayanand college of commerce, Latur (2023)</p>
+      <p>Dayanand College of Commerce, Latur (2023)</p>
     </div>
-
     <div class="item">
       <h3>HSC</h3>
-      <p>Dayanand college of commerce, Latur (2020)</p>
+      <p>Dayanand College of Commerce, Latur (2020)</p>
     </div>
-
     <div class="item">
       <h3>SSC</h3>
-      <p>Shri shivaji high school, Latur (2018)</p>
+      <p>Shri Shivaji High School, Latur (2018)</p>
     </div>
   </div>
 </section>
 
 <section>
   <h2 class="section-title">Projects</h2>
-
   <div class="project-grid">
     <div class="project-card">
       <h3>Chat Messenger</h3>
-      <p>This project provides the chatting facility for pear to pear communication.</p>
-      <p>This application is platform & architecture independent.</p>
+      <p>Peer-to-peer chat application.</p>
       <p class="tech">Tech: Java, OOP</p>
-      <a href="https://github.com/Suraj-2003/LB-Projects/tree/main/ChatApplication">Project Link</a>
+      <a href="https://github.com/Suraj-2003/LB-Projects/tree/main/ChatApplication" target="_blank">Project Link</a>
     </div>
 
     <div class="project-card">
       <h3>Generalised Data Structure Library</h3>
-      <p>This project is considered as a library which contains generic implementation of all major types of data structures.</p>
-      <p>All the object oriented design policies are used in this project.</p>
+      <p>Generic implementation of major data structures.</p>
       <p class="tech">Tech: C++</p>
-      <a href="https://github.com/Suraj-2003/LB-Projects/tree/857fe8f28d71c951bfbe173dfe7f2b52057f2a39/Generic%20Data%20Structures%20Library">Project Link</a>
+      <a href="https://github.com/Suraj-2003/LB-Projects" target="_blank">Project Link</a>
     </div>
   </div>
 </section>
@@ -92,56 +78,18 @@
   <div class="skills">
     <h2 class="section-title">Skills</h2>
     <ul>
-      <li>C</li>
-      <li>C++</li>
-      <li>Java</li>
-      <li>Angular</li>
-      <li>HTML</li>
-      <li>CSS</li>
+      <li>C</li><li>C++</li><li>Java</li><li>Angular</li><li>HTML</li><li>CSS</li>
     </ul>
   </div>
 
   <div class="tools">
     <h2 class="section-title">Tools</h2>
     <ul>
-      <li>VS Code</li>
-      <li>Git</li>
-      <li>GitHub</li>
-      </ul>
-  </div>
-</section>
-
-<section>
-  <h2 class="section-title">Experience</h2>
-  <ul class="list">
-    <li>Cognifyz Technologies : C/C++ Programming Intern | (Internship) |
-    <a href="https://drive.google.com/file/d/1RzYMXF9buC15qjkPf2TLwTtv3Akp3cJZ/view">Link</a>
-    </li>
-    </ul>
-</section>
-<!--
-<section>
-  <h2 class="section-title">Extra Curricular</h2>
-  <ul class="list">
-    <li>Sports Event Coordination</li>
-    <li>Social Volunteering</li>
-  </ul>
-</section>
-
--->
-
-<section>
-  <h2 class="section-title">Technical Highlights</h2>
-  <div class="ref-box"><ul>
-      <li>Experience in application development using C, C++, Java.</li>
-      <li>Experience in Algorithm designing.</li>
-      <li>Experience in Client side Web development using Angular.</li>
-      <li>Good analytical and problem solving skills.</li>
-    
+      <li>VS Code</li><li>Git</li><li>GitHub</li>
     </ul>
   </div>
 </section>
-<<<<<<< HEAD
+
 <section class="recommendation-section">
   <h2 class="section-title">Recommendations</h2>
 
@@ -149,64 +97,55 @@
 
     <div class="recommendation-card">
       <div class="rec-header">
-        <img src="IMAGE.jpeg" alt="Rahul Sharma" class="rec-avatar" />
-        <div class="rec-info">
-          <h3 class="rec-name">Suraj More</h3>
-          <p class="rec-role">Software System Manager</p>
-        </div>
-        <a href="https://linkedin.com" target="_blank" class="rec-linkedin">
-          <img src="https://www.linkedin.com/in/suraj-more-488636200/" alt="LinkedIn"/>
-        </a>
-      </div>
-
-      <p class="rec-message">
-        Suraj is a highly dedicated developer with excellent problem-solving skills.
-        He consistently delivers clean and scalable solutions.
-      </p>
-    </div>
-
-    <div class="recommendation-card">
-      <div class="rec-header">
-        <img src="IMAGE.jpeg" alt="Neha Kulkarni" class="rec-avatar" />
+        <img src="IMAGE.jpeg" class="rec-avatar">
         <div class="rec-info">
           <h3 class="rec-name">Ganesh Kadam</h3>
-          <p class="rec-role">Senior UI/UX Designer</p>
+          <p class="rec-role">Software Manager</p>
         </div>
         <a href="https://linkedin.com" target="_blank" class="rec-linkedin">
-          <img src="https://www.linkedin.com/in/suraj-more-488636200/" alt="LinkedIn"/>
+          <img src="linkedin.svg">
         </a>
       </div>
-
       <p class="rec-message">
-        Working with Suraj was a pleasure. His attention to UI details
-        and responsiveness is outstanding.
+        Suraj is a disciplined developer with strong fundamentals.
       </p>
     </div>
 
     <div class="recommendation-card">
       <div class="rec-header">
-        <img src="IMAGE.jpeg" alt="Amit Patil" class="rec-avatar" />
+        <img src="IMAGE.jpeg" class="rec-avatar">
         <div class="rec-info">
           <h3 class="rec-name">Aniket Patil</h3>
           <p class="rec-role">Project Lead</p>
         </div>
         <a href="https://linkedin.com" target="_blank" class="rec-linkedin">
-          <img src="https://www.linkedin.com/in/suraj-more-488636200/" alt="LinkedIn"/>
+          <img src="linkedin.svg">
         </a>
       </div>
-
       <p class="rec-message">
-        Suraj takes ownership of tasks and always meets deadlines.
-        A reliable team player with strong technical skills.
+        Strong ownership and clean coding practices.
+      </p>
+    </div>
+
+    <div class="recommendation-card">
+      <div class="rec-header">
+        <img src="IMAGE.jpeg" class="rec-avatar">
+        <div class="rec-info">
+          <h3 class="rec-name">Rahul Sharma</h3>
+          <p class="rec-role">Tech Lead</p>
+        </div>
+        <a href="https://linkedin.com" target="_blank" class="rec-linkedin">
+          <img src="linkedin.svg">
+        </a>
+      </div>
+      <p class="rec-message">
+        Excellent problem-solving and consistency.
       </p>
     </div>
 
   </div>
 </section>
-=======
->>>>>>> aea7fd6a9303d26235fc11ff4149299cea3375d3
 
 </main>
-
 </body>
 </html>
